fix: style on narrow mobile

--- a/src/tiddlywiki-calendar/tiddlywiki-ui/popup/CreateNewTiddlerPopup/CreateNewTiddlerPopup.css
+++ b/src/tiddlywiki-calendar/tiddlywiki-ui/popup/CreateNewTiddlerPopup/CreateNewTiddlerPopup.css
@@ -54,6 +54,7 @@ span.tc-add-tag-name input {
 .tw-calendar-alarms {
   display: flex;
   flex-direction: column;
+  overflow-x: auto;
   width: 100%;
   margin-top: 2em;
 }
