--- a/src/tiddlywiki-calendar/tiddlywiki-ui/popup/EventPreview/EventPreviewStyle.css
+++ b/src/tiddlywiki-calendar/tiddlywiki-ui/popup/EventPreview/EventPreviewStyle.css
@@ -1,8 +1,3 @@
-title: $:/plugins/linonetwo/tw-calendar/calendar-widget/tiddlywiki-ui/popup/EventPreviewStyle.css
-creator: LinOnetwo
-tags: $:/tags/Stylesheet
-type: text/vnd.tiddlywiki
-
 .tw-calendar-layout-event-preview-container {
   display: flex;
   flex-direction: column;
@@ -11,6 +6,8 @@ type: text/vnd.tiddlywiki
 .tw-calendar-layout-event-preview-container .tc-tiddler-frame {
   padding: 1em;
   margin: 0;
+  max-width: 100%;
+  max-height: 100%;
 }
 .tw-calendar-layout-event-preview-container .tw-calendar-layout-event-preview-top-buttons {
   width: 100%;
@@ -18,7 +15,8 @@ type: text/vnd.tiddlywiki
   display: flex;
   flex-direction: row;
 }
-.tw-calendar-layout-event-preview-container input, .tw-calendar-layout-event-preview-container textarea {
+.tw-calendar-layout-event-preview-container input,
+.tw-calendar-layout-event-preview-container textarea {
   width: 100%;
 }
 .tw-calendar-layout-event-preview-container .tc-titlebar {
@@ -39,4 +37,20 @@ type: text/vnd.tiddlywiki
   display: flex;
   flex-direction: row-reverse;
   margin-top: 2em;
+}
+.tiddlywiki-calendar-widget-event-preview {
+  width: min-content;
+  min-width: 30vw;
+
+  max-height: 80vh;
+  max-width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 5px;
+  border-radius: 4px;
+  z-index: 100;
+
+  opacity: 0.9;
+  backdrop-filter: blur(10px);
 }
